# llm-arch-research

./: .gitignore  README.md  pyproject.toml
hf-proxy/: pyproject.toml
hf-proxy/src/hf_proxy/: __init__.py  hf_adapter.py  hf_config.py  hf_tokenizer.py  hf_utils.py
llm/: README.md  pyproject.toml  pytest.ini
llm/src/llm/core/: base_model.py  cached_decoder.py  decoder.py  feed_forward.py  geglu.py  gelu.py  gemma_decoder.py  gpt_decoder.py  group_query_attention.py  head_attention.py  mistral_decoder.py  mixtral_decoder.py  moe.py  multi_head_attention.py  multi_query_attention.py  positional_embeddings.py  rms_norm.py  rope.py  silu.py  swi_glu.py  token_embeddings.py
llm/src/llm/datasets/: streaming_text_dataset.py  text_dataset.py  text_with_special_tokens_dataset.py
llm/src/llm/tokenizers/: __init__.py  base_tokenizer.py  bpe_tokenizer copy.py  (+1 more)
llm/tests/: conftest.py  test_basic.py
llm/tests/core/: test_cached_decoder.py  test_decoder.py  test_feed_forward.py  test_geglu.py  test_gelu.py  test_gemma_decoder.py  test_gpt_decoder.py  test_group_query_attention.py  test_mistral_decoder.py  test_mixtral_decoder.py  test_moe.py  test_multi_head_attention.py  test_multi_query_attention.py  test_positional_embeddings.py  test_rms_norm.py  test_rope.py  test_silu.py  test_swi_glu.py  test_token_embeddings.py
llm/tests/datasets/: test_streaming_text_dataset.py  test_text_dataset.py  test_text_with_special_tokens_dataset.py
llm/tests/models/: test_gemma.py  test_gpt.py  test_gpt2.py  test_llama.py  test_mistral.py  test_mixtral.py
llm/tests/tokenizers/: test_base_tokenizer.py  test_bpe_tokenizer.py
llm/tests/training/: test_optimizer.py  test_scheduler.py  test_trainer.py
(+49 files in other folders)
