[project]
name = "llm-arch-research"
version = "0.1.0"
description = "Research workspace for LLM architectures"
authors = [
    { name = "Sergey Penkovsky", email = "sergey.penkovsky@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "accelerate>=0.26.0",
    "hf-proxy",
    "llm",
    "tqdm>=4,<5",
    "ipykernel",
    "torch==2.8.0",
    "matplotlib==3.10.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "jupyter>=1.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.uv.sources]
llm = { workspace = true, editable = true }
hf-proxy = { workspace = true, editable = true }

[tool.uv.workspace]
members = ["llm", "hf-proxy"]
exclude = []
